--- a/package.json
+++ b/package.json
@@ -11,13 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.0.0",
-    "browserify-shader": "^0.1.2",
-    "budo": "^9.4.5",
     "gl-matrix": "^2.3.2",
+    "mini-signals": "^1.1.1",
     "orbit-camera-controller": "^4.0.0",
     "pixi.js": "git+https://github.com/pixijs/pixi.js.git#next",
     "stripify": "^6.0.0",
@@ -32,6 +27,12 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.0.0",
+    "browserify-shader": "^0.1.2",
+    "budo": "^9.4.5",
     "chai": "^4.0.2"
   }
 }
